--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyChat">
         <activity
+            android:name=".ui.login.LoginActivity"
+            android:exported="false"
+            android:label="@string/title_activity_login"
+            android:theme="@style/Theme.MyChat.NoActionBar" />
+        <activity
             android:name=".ui.login.RegisterOrLoginActivity"
             android:exported="true"
             android:label="@string/title_activity_register_or_login"
-            android:theme="@style/Theme.MyChat.NoActionBar" >
+            android:theme="@style/Theme.MyChat.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -30,8 +35,7 @@
         <activity
             android:name=".ui.login.RegisterActivity"
             android:exported="false"
-            android:label="@string/app_name">
-        </activity>
+            android:label="@string/app_name"></activity>
     </application>
 
 </manifest>
