--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,12 @@
         android:theme="@style/Theme.MyChat">
         <activity
             android:name=".ui.login.LoginActivity"
+            android:noHistory="true"
             android:exported="false"
-            android:label="@string/title_activity_login"
             android:theme="@style/Theme.MyChat.NoActionBar" />
         <activity
             android:name=".ui.login.RegisterOrLoginActivity"
             android:exported="true"
-            android:label="@string/title_activity_register_or_login"
             android:theme="@style/Theme.MyChat.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -30,12 +29,12 @@
         <activity
             android:name=".main.activity.MainScreenActivityRegular"
             android:exported="false"
-            android:label="@string/title_activity_main_screen"
+            android:noHistory="true"
             android:theme="@style/Theme.MyChat.NoActionBar" />
         <activity
             android:name=".ui.login.RegisterActivity"
-            android:exported="false"
-            android:label="@string/app_name"></activity>
+            android:noHistory="true"
+            android:exported="false" />
     </application>
 
 </manifest>
